# privat-api-privat

./: README.md  pyproject.toml
privat_api_privat/: pap.py
