[tool.poetry]
name = "privat-api-privat"
version = "0.1.0"
description = ""
authors = ["Anatolii6974 <anatolii.perfilov@gmail.com>"]
readme = "README.md"
packages = [{include = "privat_api_privat"}]

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.8.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[virtualenvs] 
in-project = true
